# advent_of_code

./: .gitignore  README.md  setup.py
2021/python/: README.rst  setup.py
2021/python/day_01/: README.rst  pyproject.toml
2021/python/day_02/: README.rst  pyproject.toml
2021/python/day_03/: README.rst  pyproject.toml
2021/python/day_04/: README.rst  pyproject.toml
2021/python/day_05/: README.rst  pyproject.toml
2021/python/day_06/: README.rst  pyproject.toml
2021/python/day_07/: README.rst  pyproject.toml
2021/python/day_07/day_07/: cleaned.py  run.py
2021/python/day_07/tests/: test_day_07.py
2021/python/day_08/: README.rst  pyproject.toml
2021/python/day_09/: README.rst  pyproject.toml
2021/python/day_10/: README.rst  pyproject.toml
2021/python/day_10/day_10/: cleaned.py  run.py
2021/python/day_10/tests/: test_day_10.py
2021/python/day_11/: README.rst  pyproject.toml
2021/python/day_11/day_11/: cleaned.py  run.py
2021/python/day_11/tests/: test_day_11.py
2021/python/day_12/: README.rst  pyproject.toml
2021/python/day_13/: README.rst  pyproject.toml
2021/python/day_14/: README.rst  pyproject.toml
2021/python/day_15/: README.rst  pyproject.toml
2021/python/day_16/: README.rst  pyproject.toml
2021/python/day_17/: README.rst  pyproject.toml
2021/python/day_18/: README.rst  pyproject.toml
2021/python/day_19/: pyproject.toml
2021/python/day_20/: README.rst  pyproject.toml
2021/python/day_21/: README.rst  pyproject.toml
2021/python/day_22/: README.rst  pyproject.toml
2021/python/day_23/: pyproject.toml
2021/python/day_24/: pyproject.toml
2021/python/day_25/: README.rst  pyproject.toml
2022/python/: README.rst  setup.py
2022/python/day_01/: README.rst  pyproject.toml
2022/python/day_02/: README.rst  pyproject.toml
2022/python/day_02/day_02/: cleaned.py  run.py
2022/python/day_02/tests/: test_day_02.py
2022/python/day_03/: README.rst  pyproject.toml
2022/python/day_04/: README.rst  pyproject.toml
2022/python/day_05/: README.rst  pyproject.toml
2022/python/day_06/: README.rst  pyproject.toml
2022/python/day_07/: README.rst  pyproject.toml
2022/python/day_08/: README.rst  pyproject.toml
2022/python/day_08/day_08/: run.py
2022/python/day_08/tests/: test_day_08.py
2022/python/day_09/: README.rst  pyproject.toml
2022/python/day_10/: README.rst  pyproject.toml
2022/python/day_12/: README.rst  pyproject.toml
2022/python/day_13/: README.rst  pyproject.toml
2022/python/day_14/: README.rst  pyproject.toml
2022/python/day_14/day_14/: run.py
2022/python/day_14/tests/: test_day_14.py
2022/python/day_17/: README.rst  pyproject.toml
2023/python/: README.rst
2023/python/day-01/: README.rst  pyproject.toml
2023/python/day-02/: README.rst
2023/python/day-03/: README.rst
2023/python/day-04/: README.rst
2023/python/day-05/: README.rst
2023/python/day-11/: README.rst  pyproject.toml
2023/python/day-11/solver/: part_1.py  part_2.py
2023/python/day-11/tests/: test_solver.py
aoc-template/: pyproject.toml
aoc-template/aoc_template/: config.py  run.py  utils.py
aoc-template/templates/solver/: part_1.py  part_2.py  run.py  utils.py
aoc-template/templates/tests/: test_solver.py
day_14/: README.rst
day_14/solver/: part_1.py  part_2.py
day_14/tests/: test_solver.py
(+169 files in other folders)
