[tool.poetry]
name = "aoc-template"
version = "0.1.0"
description = ""
authors = ["Jahn Thomas Fidje <jtfidje@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_template"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
requests = "^2.31.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
