[tool.poetry]
name = "day_07"
version = "0.1.0"
description = ""
authors = ["Jahn Thomas Fidje <jtfidje@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pyperclip = "^1.8.2"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
