[tool.poetry]
name = "day-14"
version = "0.1.0"
description = ""
authors = ["Jahn Thomas Fidje <jtfidje@gmail.com>"]
readme = "README.rst"
packages = [{include = "day_14"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
