[tool.poetry]
name = "solver"
version = "0.1.0"
description = ""
authors = ["Jahn Thomas Fidje <jtfidje@gmail.com>"]
readme = "README.rst"
packages = [{include = "solver"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
